# Calculator

./: .gitignore  CMakeLists.txt  Calculator.cpp  Calculator.hpp  README.md  main.cpp  runTests.sh
include/: Calculator.hpp  CalculatorClass.hpp  CalculatorHelperClass.hpp  Include.hpp  Logic.hpp  LogicClass.hpp  LogicHelperClass.hpp
src/: Calculator.cpp  CalculatorClass.cpp  CalculatorHelperClass.cpp  Logic.cpp  LogicClass.cpp  LogicHelperClass.cpp
test/: CalculatorClassTest.cpp  CalculatorHelperTest.cpp  Calculator_test.cpp  Calculator_test.hpp  Calculator_test_UI.cpp  LogicClassTest.cpp  LogicHelperClassTest.cpp
